# fury

./: .gitignore  README.md  pyproject.toml
docs/: agent.md  example.md  history_manager.md
examples/: chat.py  cron_tasks.py  history_manager.py  tts.py  voice_chat.py
examples/coding-assistant/: coding_assistant.py
src/agent_lib/: agent.py
src/fury/: __init__.py  agent.py  historymanager.py  neutts_minimal.py
tests/: test_agent_chat_and_tools.py  test_chat_loop.py  test_history_manager.py  test_tool_calling.py  test_tts_generation.py
